client/vite-project/src/index.css
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {

  font-family: "Bayon", sans-serif;
  font-weight: 400;
  font-style: normal;
  

}

.container{
  width: 100%;
  height: 100vh;
  background-color:#f0f8ff
  
}

.header-container{
  margin: 1rem;
  padding: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: red;
  font-size: 2.5rem;

}

button:hover {
  transform: scale(1.05);
}

.upper-body{
  display: grid;
  grid-template-columns: 1fr 1fr;
  
}

.chart-container, .label-container{
  position: relative;
  margin: 1rem;
  margin-left: 10rem;
  width: 500px;
}

.label-container{
  display: grid;
  grid-template-columns: 1fr ;
  
  
}



.total-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  position: absolute;
  right: 0;
  left: 0;
  top: 40%;
  font-size: 2rem;
  
}


.label{
  display: flex;
  margin-bottom: 1rem;
  gap: 1rem;
}

.label-colour{
  width: 20px;
  height: auto;
}


.form-container{
  width: 500px;
}

.create-expense-form{
  margin: 5rem;
  margin-bottom: 1.5rem;
  margin-right: 10rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  
}

.create-expense-form input, .create-expense-form select{
  width: 500px;
  padding: 1rem;
  border: none;
  border-radius: 0.5rem;
  background-color: white;
  box-shadow:0 0 10px 2px rgba(0,0,0,0.1);
}

#addTransaction{
  text-align: center;
  width: 200px;
  height: 50px;
  background-color: black;
  color: white;
  font-size: 1rem;
  border: none;
  border-radius: 10px;
}



.history-btn button{
  text-align: center;
  background-color: black;
  color: white;
  font-size: 1rem;
  border: none;
  border-radius: 10px;
  margin-left: 5rem;
  padding: 1.5rem;
}


.table-container{
width: 100%;
display: flex;
justify-content: center;
align-items: center;
margin-top: 2rem;
  
}

caption{
  margin-bottom: 1rem;
}

table{
  font-size: 2rem;
  border-collapse: collapse;
  
}



thead{
  background-color: red;
  text-align: left;
}

thead tr{
  color: white;
}

tbody tr{
  padding: 1rem;
}

th, td {
  padding: 1rem;
}

#home-icon{
  font-size: 3rem;
  margin: 2rem;
  color: black;
}

.overlay {
  position: fixed; /* Sit on top of the page content */
  display: block; /* Visible by default */
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
  cursor: pointer; /* Add a pointer on hover */
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal-Container{
  border-radius: 0.5rem;
  width: 30vw;
  display: flex;
  flex-direction: column;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  padding: 1.5rem;
}

.edit-Expense-Form{
  gap: 1rem;
  padding: 1rem;
  display: flex;
  flex-direction: column;
}

.edit-Expense-Form input, .edit-Expense-Form select {
  font-size: 1.5rem;
}

.title{
  text-align: center;
  font-size: 2.5rem;
}

.closeBtn{
  display: flex;
  justify-content: flex-end;
}

.closeBtn button{
  padding: 0.5rem;
  background-color: black;
  border: none;
  border-radius: 40%;
  font-size: 25px;
  cursor: pointer;
  color: white;
  
}

.saveChangesBtn{
  display: flex;
  justify-content: center;
}

.saveChangesBtn button{
  width: 50%;
  text-align: center;
  background-color: black;
  color: white;
  font-size: 1.5rem;
  border: none;
  border-radius: 1rem;
  padding: 1rem;
}



.logreg-container{
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url("./images/pexels-gabriela-palai-129458-395196.jpg");
  background-size: cover;
  background-position: 100% 100%; /* This positions the background image at the bottom right corner */
  /* Other background properties */
}




.login-register-form{
  background-color: rgba(255, 255, 255, 0.8); 
  border-radius: 10px;
  font-size: 1.5rem;
  display: flex;
  flex-direction: column;
  width: 500px;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  padding: 1rem;
  color: black;
}

@media screen  and (max-width: 330px) {
  .login-register-form {
    width: 250px;
  }
}


@media screen and (min-width: 331px)  and (max-width: 530px) {
  .login-register-form {
    width: 250px;
  }
}

@media screen and (min-width: 531px) and (max-width: 800px) {
  .login-register-form {
    width: 300px;
  }
}

.underline{
  background-color: black;
  width: 50px;
  height: 5px;
  margin-top: 0.25rem;
  margin-left: 2.5rem;
  
}

.headerLog{
  font-size: 2rem;
}



.registerBtn, .loginBtn{
  padding: 1rem;
  background-color: black;
  color: white;
  border: none;
  font-size: 1rem;
  border-radius: 10px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);

}

input{
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 8px 12px;
  font-size: 14px;
  color: #333;
  background-color: #f7f7f7;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
  font-family: Arial, sans-serif;

}

.logRegMessage{
  font-size: 1rem;
  margin-top: 1rem;
}

.form-choice{
  color: blue;
}

